<resources>
    <string name="app_name">lab3</string>
    <string name="ask_question">Ask Question</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="information">Fill information about yourself</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="play">Play</string>
    <string name="give_me_answer">Give me answer</string>
    <string name="birthday">Birthday</string>
</resources>
