<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="@dimen/default_padding">
    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textSize="18sp"
    />
    <EditText
        android:id="@+id/first_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:layout_margin="@dimen/default_margin"
        android:layout_below="@id/information"
        />
    <EditText
        android:id="@+id/last_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/last_name"
        android:layout_below="@id/first_name"
        android:layout_margin="@dimen/default_margin"
        />
    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_name"
        android:text="@string/birthday"/>
    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:layout_below="@id/last_name"
        android:layout_toEndOf="@id/birthday"
        />
    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_below="@id/datePicker"
        android:layout_alignLeft="@id/birthday"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/datePicker"
        android:layout_toEndOf="@id/gender"
        android:layout_below="@id/datePicker"
        >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>
<Button
    android:id="@+id/save"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/save"
    android:layout_marginRight="15dp"
    android:layout_below="@id/datePicker"
    android:layout_alignRight="@id/datePicker"/>
</RelativeLayout>