<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <Button
        android:id="@+id/startGameButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:enabled="false"/>

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_below="@id/startGameButton"/>

    <Button
        android:id="@+id/exitButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_below="@id/settingsButton"/>
    <Button
        android:id="@+id/generateNumberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/exitButton"
        android:text="generate" />
    <FrameLayout
        android:layout_below="@id/generateNumberButton"
        android:layout_width="200dp"
        android:layout_height="100dp">
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/numberTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="12345"/>
    </FrameLayout>
    </RelativeLayout>